--- a/index.html
+++ b/index.html
@@ -1632,7 +1632,7 @@ a{color:inherit;text-decoration:none}
       <a href="#steps">Как проходит терапия</a>
       <a href="#prices">Услуги и цены</a>
       <a href="#contacts">Контакты</a>
-      <a class="header-cta" href="#booking">Записаться</a>
+      <a class="header-cta" href="#contacts">Записаться</a>
     </nav>
 
     <button class="burger" aria-label="Открыть меню" aria-expanded="false">
@@ -1657,7 +1657,7 @@ a{color:inherit;text-decoration:none}
     <a href="#steps">Как проходит терапия</a>
     <a href="#prices">Услуги и цены</a>
     <a href="#contacts">Контакты</a>
-    <a class="menu-cta1" href="#booking">Записаться</a>
+    <a class="menu-cta1" href="#contacts">Записаться</a>
   </nav>
   
 </div>
@@ -1686,7 +1686,7 @@ a{color:inherit;text-decoration:none}
       </p>
 
       <div class="hero-actions">
-        <a href="#booking" class="btn-primary">Записаться</a>
+        <a href="#contacts" class="btn-primary">Записаться</a>
         <a href="https://t.me/" target="_blank" rel="noopener" class="btn-secondary">Написать в Telegram</a>
       </div>
 
@@ -1708,7 +1708,7 @@ a{color:inherit;text-decoration:none}
 
   <!-- Фиксированная кнопка (показывается только на мобиле через @media) -->
   <div class="fixed-booking-btn">
-    <a href="#booking" class="fixed-div">
+    <a href="#contacts" class="fixed-div">
       <svg viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" aria-hidden="true">
         <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.8 19.8 0 0 1 2.08 4.18 2 2 0 0 1 4.06 2h3a2 2 0 0 1 2 1.72c.12.89.33 1.76.63 2.59a2 2 0 0 1-.45 2.11L8 9a16 16 0 0 0 7 7l.58-1.25a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.59.63A2 2 0 0 1 22 16.92z"/>
       </svg>
@@ -1794,7 +1794,7 @@ a{color:inherit;text-decoration:none}
             <h3>Партнёрские отношения</h3>
           </div>
           <p>Развод, измена, кризисы в паре, чувство одиночества или созависимости. На сессиях учимся слышать себя, выстраивать границы и говорить без обвинений.</p>
-          <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
+          <a href="#contacts" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
         <!-- 2 -->
@@ -1806,7 +1806,7 @@ a{color:inherit;text-decoration:none}
             <h3>Детско‑родительские отношения</h3>
           </div>
           <p>Трудности в установлении границ «надо, могу, хочу», конфликты поколений и чувство вины. В терапии мы ищем больше ясности и доверия в отношениях.</p>
-          <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
+          <a href="#contacts" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
         <!-- 3 -->
@@ -1818,7 +1818,7 @@ a{color:inherit;text-decoration:none}
             <h3>Травматический опыт и психосоматика</h3>
           </div>
           <p>Сложные переживания прошлого — детский опыт, потеря близких, насилие, аварии и другие события — могут «застревать» внутри и проявляться в теле через напряжение, тревогу или боль.</p>
-          <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
+          <a href="#contacts" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
         <!-- 4 -->
@@ -1833,7 +1833,7 @@ a{color:inherit;text-decoration:none}
             <h3>Личностный кризис и выгорание</h3>
           </div>
           <p>Апатия, тревога, хронический стресс. Сложности с самооценкой и поиском самореализации. Желание быть принятым и при этом сохранить свою уникальность.</p>
-          <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
+          <a href="#contacts" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
 
         <!-- 5 — нижняя карточка, НЕ баннер -->
@@ -1849,7 +1849,7 @@ a{color:inherit;text-decoration:none}
             <h3>Ваш случай уникален</h3>
           </div>
           <p>Не нашли свой запрос в списке или сложно его сформулировать? Начнём с простого разговора — расскажите, что Вас беспокоит, и мы вместе найдём путь к решению.</p>
-          <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
+          <a href="#contacts" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
         <!-- Пустой гибкий элемент для симметрии строки (создаёт правый зазор как на макете) -->
         <div style="display:block"></div>
@@ -1873,7 +1873,7 @@ a{color:inherit;text-decoration:none}
             </svg>
           </div>
           <div class="step-title">Знакомство</div>
-          <a class="step-sub" href="#booking">Первая встреча с Вами</a>
+          <a class="step-sub" href="#contacts">Первая встреча с Вами</a>
           <p class="step-text">Формулируем запрос, выбираем формат (очно/онлайн), обсуждаем ожидания и правила.</p>
         </article>
 
@@ -1887,7 +1887,7 @@ a{color:inherit;text-decoration:none}
             </svg>
           </div>
           <div class="step-title">План</div>
-          <a class="step-sub" href="#booking">Цели и методы</a>
+          <a class="step-sub" href="#contacts">Цели и методы</a>
           <p class="step-text">Цели, частота (обычно 1 раз в неделю), подходы (ТА/EMDR/Семейная терапия).</p>
         </article>
 
@@ -1900,7 +1900,7 @@ a{color:inherit;text-decoration:none}
             </svg>
           </div>
           <div class="step-title">Поддержка</div>
-          <a class="step-sub" href="#booking">Процесс изменений</a>
+          <a class="step-sub" href="#contacts">Процесс изменений</a>
           <p class="step-text">Отслеживаем состояние, закрепляем навыки, корректируем план.</p>
         </article>
       </div>
@@ -1982,7 +1982,7 @@ a{color:inherit;text-decoration:none}
           <div class="price-title">Индивидуальная терапия</div>
           <div class="price-sub">50 минут</div>
           <div class="price-value">6 000 ₽</div>
-          <a class="price-btn" href="#booking">Записаться</a>
+          <a class="price-btn" href="#contacts">Записаться</a>
         </article>
 
         <!-- Парная -->
@@ -1994,7 +1994,7 @@ a{color:inherit;text-decoration:none}
           <div class="price-title">Парная терапия</div>
           <div class="price-sub">90 минут</div>
           <div class="price-value">8 000 ₽</div>
-          <a class="price-btn" href="#booking">Записаться</a>
+          <a class="price-btn" href="#contacts">Записаться</a>
         </article>
       </div>
 
@@ -2595,45 +2595,45 @@ a{color:inherit;text-decoration:none}
 
 
 
-      <!-- ПРАВАЯ КОЛОНКА -->
-      <div class="ct-right">
-        <div class="h">Быстрая связь</div>
-        <div class="sub">Оставьте контакты и удобное время.</div>
+     <!-- ПРАВАЯ КОЛОНКА -->
+<div class="ct-right">
+  <div class="h">Быстрая связь</div>
+  <div class="sub">Оставьте контакты и удобное время.</div>
 
-        <form id="contactForm" class="form-row">
-          <input class="input" type="text" placeholder="Ваше имя" name="name" id="name" required>
-          <input class="input" type="tel" placeholder="Телефон" name="phone" id="phone" required>
+  <form id="contactForm" class="form-row">
+    <input class="input" type="text" placeholder="Ваше имя" name="name" id="name" required>
+    <input class="input" type="tel" placeholder="Телефон" name="phone" id="phone" required>
 
-          <div class="label" style="font-size:15px; color:#2B2B2B; font-weight:700; margin-top:2px;">Способ связи</div>
-          <div class="radio-row">
-            <label class="radio">
-              <input type="radio" name="contact_way" value="telegram" id="telegram" checked> Telegram
-            </label>
-            <label class="radio">
-              <input type="radio" name="contact_way" value="whatsapp" id="whatsapp"> WhatsApp
-            </label>
-          </div>
-
-          <textarea class="textarea" placeholder="Удобное время для связи и краткое описание запроса" name="comment" id="comment"></textarea>
-
-          <label class="chk">
-            <input type="checkbox" name="agree" id="agreement" required>
-            Согласен(а) с <a href="#privacy">Политикой конфиденциальности</a>
-          </label>
-
-          <button class="btn-send" type="submit">
-            <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M10 14l11-11"></path>
-              <path d="M21 3l-6 18-4-7-7-4 17-7z"></path>
-            </svg>
-            Отправить заявку
-          </button>
-
-          <div class="ct-note">Отвечаю в течение дня</div>
-        </form>
-      </div>
+    <div class="label" style="font-size:15px; color:#2B2B2B; font-weight:700; margin-top:2px;">Способ связи</div>
+    <div class="radio-row">
+      <label class="radio">
+        <input type="radio" name="contact_way" value="telegram" id="telegram" checked> Telegram
+      </label>
+      <label class="radio">
+        <input type="radio" name="contact_way" value="whatsapp" id="whatsapp"> WhatsApp
+      </label>
     </div>
-  </div>
+
+    <textarea class="textarea" placeholder="Удобное время для связи и краткое описание запроса" name="comment" id="comment"></textarea>
+
+    <label class="chk">
+      <input type="checkbox" name="agree" id="agreement" required>
+      Согласен(а) с <a href="#privacy">Политикой конфиденциальности</a>
+    </label>
+
+    <button class="btn-send" type="submit">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M10 14l11-11"></path>
+        <path d="M21 3l-6 18-4-7-7-4 17-7z"></path>
+      </svg>
+      Отправить заявку
+    </button>
+
+    <div class="ct-note">Отвечаю в течение дня</div>
+  </form>
+</div>
+</div>
+</div>
 </section>
 
 <!-- ===== ФУТЕР ===== -->
@@ -2871,45 +2871,42 @@ form.addEventListener('submit', async (event) => {
     return;
   }
 
-  const message = `Новая заявка:\nИмя: ${name}\nТелефон: ${phone}\nКомментарий: ${comment}`;
+  // Добавляем дату и время по МСК
+  const now = new Date();
+  const mskDateTime = now.toLocaleString('ru-RU', { timeZone: 'Europe/Moscow' });
+
+  // Новый формат сообщения
+  const message = `Новая заявка от: ${mskDateTime}\nИмя: ${name}\nТелефон: ${phone}\nСпособ связи: ${messenger.toUpperCase()}\nКомментарий: ${comment}`;
+
+  console.log('Отправляемое сообщение:', message);  // Лог для отладки
 
   try {
-    let response;
-    if (messenger === 'telegram') {
-      const telegramToken = '7305679199:AAGZyy9VTYRMdmccXnejIvPebaAtVvCgr1M';
-      const telegramChatId = '-4855775010';
-      const url = `https://api.telegram.org/bot${telegramToken}/sendMessage?chat_id=${telegramChatId}&text=${encodeURIComponent(message)}`;
+    const telegramToken = '8295715099:AAFqT9-C-10i4WAlFX-YxeenI72JhK3S7Vk';  // Проверьте, верный ли токен
+    const telegramChatId = '-1003175455030';  // Замените на новый ID (начинается с -100...)
+    const url = `https://api.telegram.org/bot${telegramToken}/sendMessage?chat_id=${telegramChatId}&text=${encodeURIComponent(message)}`;
 
-      response = await fetch(url);
-    } else if (messenger === 'whatsapp') {
-      const whatsappAccessToken = 'YOUR_WHATSAPP_ACCESS_TOKEN';
-      const whatsappPhoneNumberId = 'YOUR_PHONE_NUMBER_ID';
-      const recipientPhone = 'YOUR_RECIPIENT_PHONE';
+    const response = await fetch(url);
 
-      const url = `https://graph.facebook.com/v20.0/${whatsappPhoneNumberId}/messages`;
-
-      response = await fetch(url, {
-        method: 'POST',
-        headers: {
-          'Authorization': `Bearer ${whatsappAccessToken}`,
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          messaging_product: 'whatsapp',
-          to: recipientPhone,
-          type: 'text',
-          text: { body: message }
-        })
-      });
-    }
+    console.log('Статус ответа:', response.status);  // Лог: 200 = OK, 401 = плохой токен, 400 = плохой chat_id
+    console.log('Полный ответ:', response);
 
     if (response.ok) {
       alert('Заявка отправлена успешно!');
       form.reset();
     } else {
-      alert('Ошибка отправки. Попробуйте позже.');
+      // Получаем детали ошибки от API
+      const data = await response.json();
+      console.error('Детали ошибки API:', data);
+      
+      // Если ошибка с апгрейдом группы, показываем новый ID в алерте
+      if (data.description.includes('group chat was upgraded to a supergroup chat') && data.parameters && data.parameters.migrate_to_chat_id) {
+        alert(`Ошибка: Группа обновлена до супергруппы. Новый chat ID: ${data.parameters.migrate_to_chat_id}. Обновите код и попробуйте снова.`);
+      } else {
+        alert('Ошибка отправки: ' + (data.description || 'Неизвестная ошибка') + '. Попробуйте позже.');
+      }
     }
   } catch (error) {
+    console.error('Ошибка fetch:', error);
     alert('Произошла ошибка: ' + error.message);
   }
 });
